// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render provider search correctly 1`] = `
<div>
  <div>
    <form
      className="form"
    >
      <div
        className="input-group mb-3"
      >
        <input
          className="input username"
          name="username"
          onChange={[Function]}
          placeholder="Search for providers..."
          type="text"
        />
        <input
          className="input zipcode"
          name="username"
          onChange={[Function]}
          placeholder="Zipcode"
          type="text"
        />
        <div
          className="input-group-append"
        >
          <button
            className="search-button btn btn-success"
            onClick={[Function]}
            style={
              Object {
                "margin": "2px",
              }
            }
            type="button"
          >
            Search
          </button>
        </div>
      </div>
    </form>
  </div>
  <div>
    <h3>
      Service Providers
    </h3>
    <table
      className="table"
    >
      <tbody />
    </table>
  </div>
</div>
`;

exports[`Render provider search correctly 2`] = `
<div>
  <div>
    <form
      className="form"
    >
      <div
        className="input-group mb-3"
      >
        <input
          className="input username"
          name="username"
          onChange={[Function]}
          placeholder="Search for providers..."
          type="text"
        />
        <input
          className="input zipcode"
          name="username"
          onChange={[Function]}
          placeholder="Zipcode"
          type="text"
        />
        <div
          className="input-group-append"
        >
          <button
            className="search-button btn btn-success"
            onClick={[Function]}
            style={
              Object {
                "margin": "2px",
              }
            }
            type="button"
          >
            Search
          </button>
        </div>
      </div>
    </form>
  </div>
  <div>
    <h3>
      Service Providers
    </h3>
    <table
      className="table"
    >
      <tbody>
        <tr>
          <td>
            username1
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
